<?xml version="1.0"?>
<package>
  <name>dynamixel_controller</name>
  <version>0.1.0</version>
  <description>The dynamixel_controller package</description>

  <maintainer email="zerom@robotis.com">ROBOTIS</maintainer>


  <license>GPLv2</license>


  <!-- <url type="website">http://wiki.ros.org/dynamixel_controller</url> -->


  <author email="zerom@robotis.com">ROBOTIS</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
